# oeplatform

./: .bumpversion.cfg  .djlintrc  .dockerignore  .eslintrc.json  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTE.md  CONTRIBUTING.md  README.md  README.rst  RELEASE_PROCEDURE.md  REUSE-cleaned.toml  REUSE.toml  USERS.cff  alembic.ini  base-style.css  create_test_user.py  default.env.development  default.env.vite.prod  docs_requirements.txt  environment.yml  eslint.config.mjs  index.html  info.py  mail-to-github.json  mail_to_handle.py  make_reuse_compliant.py  manage.py  matplotlibrc  mkdocs.yaml  mkdocs.yml  objects.inv  (+11 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.reuse/: dep5
LICENSES/: MIT.txt
__0_local_scripts/: create_oep_user.py
_docs/: Makefile
api/: __init__.py  actions.py  admin.py  apps.py  connection.py  decorators.py  encode.py  error.py  helper.py  models.py  parser.py  permissions.py  references.py  serializers.py  sessions.py  sparql_helpers.py  table_handler.py  tests.py  urls.py  utilities.py  utils.py  views.py
base/: admin.py  apps.py  forms.py  helper.py  models.py  structures.py  tests.py  urls.py  views.py
css/: extra.css
databus/: apps.py  databus.py  errors.py  urls.py  views.py
dataedit/: admin.py  apps.py  forms.py  helper.py  models.py  structures.py  tests.py  urls.py  utils.py  views.py  views.py~
dev/: index.html
docker/: Dockerfile  Dockerfile.dev  Dockerfile.ontop  Dockerfile.ontop-init  Dockerfile.vite  README.md  USAGE.md  apache2.conf  docker-compose.databus.dev.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.dev.sh  docker-entrypoint.sh  ontop-entrypoint.sh  vite-entrypoint.sh
docs/: index.md  installation.md  make.bat
factsheet/: __init__.py  apps.py  helper.py  models.py  perm_decorators.py  permission_decorator.py  schema.py  urls.py  utils.py  views.py
install-and-documentation/: index.html
installation/: index.html
literature/: apps.py  forms.py  urls.py  views.py
login/: __init__.py  adapters.py  backends.py  forms.py  mail.py  middleware.py  models.py  partial_views.py  permissions.py  tests.py  url.py  urls.py  utilities.py  utils.py  views.py
modelview/: admin.py  apps.py  forms.py  helper.py  models.py  rdfstructures.py  tests.py  urls.py  utils.py  views.py
oedb/: connection.py  env.py  structures.py  utils.py
oedb_datamodels/: env.py
oekg/: README.md  admin.py  apps.py  models.py  sparqlModels.py  sparqlQuery.py  tests.py  urls.py  utils.py  views.py
oem_creator/: apps.py  forms.py  urls.py  views.py
oeo_ext/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
oeo_viewer/: .gitignore  __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
(+1454 files in other folders)
